# skill_research

./: .gitignore  README.md  pyproject.toml
.dev/: Dockerfile  docker-compose.yml  main.py
configs/: selector_comparison_gpt55_32evo_16val_32test_3seeds.json  selector_comparison_gpt55_32evo_16val_32test_4seeds.json
docker/: Dockerfile  docker-compose.yml
docs/: 0_2_0_alignment_checklist.md  0_2_0_data_interface.md  data_setup.md
skills/minimal_seed/: SKILL.md
src/skill_research/: __init__.py  fetch_data.py  traces.py
tests/unit/: test_agent_runner.py  test_artifact_contract_layout.py  test_artifact_resume.py  test_benchmark_cache.py  test_benchmark_returns_traces.py  test_benchmark_runner.py  test_benchmark_serialization.py  test_benchmark_summary.py  test_clean_artifact_contract.py  test_comparison_shared_artifacts.py  test_comparison_shared_round.py  test_component_registries_fresh.py  test_config_dataset_fresh.py  test_config_loader_formats.py  test_core_contracts_fresh.py  test_data_interface.py  test_data_splits.py  test_dataset_harness_contracts.py  test_dataset_region_validation.py  test_empty_model_output_failure.py  test_episode_noop_keeps_skill.py  test_episode_with_benchmark_result.py  test_eval_artifact_names.py  test_evaluator.py  test_executor_absolute_paths.py  test_executor_evaluator_fresh.py  test_experiments_artifacts_fresh.py  test_generate_report_cli.py  test_greedy_selector_validation.py  test_harness_events.py  test_improvement_loop.py  test_linear_selector_features.py  test_linear_selectors.py  test_llm_backend_integration.py  (+53 more)
(+81 files in other folders)
