[project]
name = "skill_research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
skill_research = "skill_research:main"
skill_research_fetch_data = "skill_research.fetch_data:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
